--- a/styles.css
+++ b/styles.css
@@ -1,34 +1,43 @@
 body{
-    background-color: grey;
-    display: flex;
-    flex-direction: row;
-    height: 100vh;
-    align-items: center;
+    font-family: "Poppins", sans-serif;
+    display:flex;
     justify-content: center;
-    align-content: center;
+    align-items: center;
+    height: 70vh;
+    flex-direction: column;
+    background-color: beige;
 }
+h1{
+    justify-content: center;
+    font-size: 8vw;
+    background-image: url(/image/7658055.webp);
+    -webkit-text-fill-color:transparent;
+    -webkit-background-clip: text;
+}
+#menu{
 
-#container {
-    background-color: black;
-    width: 960px;
-    height: 960px;
+}
+form{
     font-style: bold;
     font-weight: 200px;
-    font-size: 20px;
+}
+button{
+    margin-top: 5px;
+}
+#gridContainer {
+    background-color: lightgray;
+    margin-top: 25px;
+    border: 4px solid black;
+    width: 25vw;
+    height: 25vw;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: stretch;
-    align-content: center;
+    flex-direction: column;
 }
-
-#container div {
-    background-color: blue;
-    border: 1px solid white;
-    height: 50px;
-    width: 50px;
+.row{
+    display: flex;
+    flex: 1;
 }
-
-#container div:hover{
-    background-color: white;
+.column {
+    flex: 1;
+    border: 0.5px solid black;
 }
