--- a/styles.css
+++ b/styles.css
@@ -15,14 +15,32 @@ h1{
     -webkit-background-clip: text;
 }
 #menu{
-
+    font-size:1vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 form{
+    margin-top: 10px;
+    size: 1vw;
     font-style: bold;
     font-weight: 200px;
 }
+#buttonMenu{
+    margin-top: 10px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
 button{
-    margin-top: 5px;
+    font-weight: 200px;
+    color: rgb(27, 27, 27);
+    background-color: #f8fd99;
+    size: 10vw;
+    font-size: 1vw;
+    margin: 5px;
+    border-radius: 10px;
+    border: 2px solid rgb(0, 0, 0);
 }
 #gridContainer {
     background-color: lightgray;
