--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 body{
+    margin-top: 150px;
     font-family: "Poppins", sans-serif;
     display:flex;
     justify-content: center;
@@ -7,55 +8,75 @@ body{
     flex-direction: column;
     background-color: beige;
 }
+
 h1{
     justify-content: center;
     font-size: 8vw;
     background-image: url("./image/7658055.webp");
     -webkit-text-fill-color:transparent;
     -webkit-background-clip: text;
+    margin-top: 20px;
 }
+
 #menu{
     font-size:1vw;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
 form{
     margin-top: 10px;
     size: 1vw;
     font-style: bold;
     font-weight: 200px;
 }
+
 #buttonMenu{
     margin-top: 10px;
     display: flex;
     flex-direction: row;
     align-items: center;
 }
+
 button{
     font-weight: 200px;
     color: rgb(27, 27, 27);
-    background-color: #f8fd99;
+    background-color: #f0f7fd;
     size: 10vw;
     font-size: 1vw;
     margin: 5px;
     border-radius: 10px;
     border: 2px solid rgb(0, 0, 0);
 }
+
 #gridContainer {
     background-color: lightgray;
     margin-top: 25px;
     border: 4px solid black;
-    width: 25vw;
-    height: 25vw;
+    width: 480px;
+    height: auto;
+    aspect-ratio: 1/1;                  
     display: flex;
     flex-direction: column;
 }
+
 .row{
     display: flex;
     flex: 1;
 }
+
 .column {
     flex: 1;
-    border: 0.5px solid black;
+    border: 1px solid black;
 }
+
+footer{
+    margin-top: 100px;
+}
+
+footer text {
+    margin: 2vh;
+    color: rgb(0, 0, 0);
+    text-align: center;
+  }
