--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-    margin-top: 150px;
+    margin-top: 75px;
     font-family: "Poppins", sans-serif;
     display:flex;
     justify-content: center;
@@ -15,10 +15,10 @@ h1{
     background-image: url("./image/7658055.webp");
     -webkit-text-fill-color:transparent;
     -webkit-background-clip: text;
-    margin-top: 20px;
 }
 
 #menu{
+    margin-top: 10px;
     font-size:1vw;
     display: flex;
     flex-direction: column;
@@ -33,7 +33,7 @@ form{
 }
 
 #buttonMenu{
-    margin-top: 10px;
+    margin-top: 20px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -51,10 +51,10 @@ button{
 }
 
 #gridContainer {
-    background-color: lightgray;
+    background-color: rgb(245, 245, 245);
     margin-top: 25px;
     border: 4px solid black;
-    width: 480px;
+    width: 40vh;
     height: auto;
     aspect-ratio: 1/1;                  
     display: flex;
@@ -78,7 +78,6 @@ button{
 
 footer{
     margin-top: 50px;
-    margin-bottom: 50px;
 }
 
 footer text {
