--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ h1{
 }
 
 #menu{
-    margin-top: 10px;
+    margin-top: 1vh;
     font-size: 2vh;
     display: flex;
     flex-direction: column;
@@ -29,14 +29,14 @@ h1{
 }
 
 form{   
-    margin-top: 1px;
+    margin-top: 1em;
     size: 1vw;
     font-style: bold;
     font-weight: 200px;
 }
 
 #buttonMenu{
-    margin-top: 1vh;
+    margin-top: 1em;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -52,7 +52,7 @@ button{
     font-size: 2vh;
     margin: 1vh;
     border-radius: 10px;
-    border: 2px solid rgb(170, 170, 170);
+    border: none;
 }
 
 #blackBrush{
@@ -72,6 +72,7 @@ button{
 }
 
 #gridContainer {
+    margin-top: 1vh;
     background-color: rgb(245, 245, 245);
     border: 4px solid black;
     width: 98%;
